--- a/Solana-Programs/hello_world/anchor/programs/anchor/Cargo.toml
+++ b/Solana-Programs/hello_world/anchor/programs/anchor/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "token-interaction-program"
+name = "anchor"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "token_interaction_program"
+name = "anchor"
 
 [features]
 default = []
