--- a/basics/mock_native/Cargo.toml
+++ b/basics/mock_native/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
-name = "mock_native"
+name = "mock-native"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+solana-program = "2.0.13"
+
+[lib]
+crate-type = ["cdylib", "lib"]
