--- a/basics/mock_native/Cargo.toml
+++ b/basics/mock_native/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+borsh = "1.5.1"
 solana-program = "2.0.13"
+borsh-derive = "0.9.1"
 
 [lib]
 crate-type = ["cdylib", "lib"]
