--- a/basics/native_prog/Cargo.toml
+++ b/basics/native_prog/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "replace_me_native"
+name = "native_prog"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-borsh = "1.5.1"
 solana-program = "2.0.14"
