--- a/basics/mock_native/Cargo.toml
+++ b/basics/mock_native/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-borsh = "0.9.3"
-solana-program = "=1.18.17"
-borsh-derive = "0.9.1"
+borsh = "1.5.1"
+solana-program = "2.0.14"
 
 [lib]
 crate-type = ["cdylib", "lib"]
