--- a/basics/favorites/native/package.json
+++ b/basics/favorites/native/package.json
@@ -7,12 +7,13 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.47.3",
-    "fs": "^0.0.1-security"
+    "borsh": "^2.0.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
+    "@types/node": "^22.8.1",
     "chai": "^4.3.4",
     "mocha": "^9.0.3",
     "solana-bankrun": "^0.3.0",
