--- a/basics/favorites/native/program/Cargo.toml
+++ b/basics/favorites/native/program/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "account-data-program"
+name = "favorites-native"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-program = "=1.18.17"
 borsh = "0.9.3"
+solana-program = "2.0.14"
 borsh-derive = "0.9.1"
 
 [lib]
